Swagger GetModule()
