# internal/transport/rest/handler/modules.go
@@ -8,6 +8,7 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// Нужен свагер!
 func (h *Handler) AddModule(c *gin.Context) {
 	var info AddModule
 
@@ -33,6 +34,7 @@ func (h *Handler) AddModule(c *gin.Context) {
 	c.Status(http.StatusOK)
 }
 
+// Нужен свагер!
 func (h *Handler) DeleteModule(c *gin.Context) {
 	var info Delete
 
@@ -49,6 +51,18 @@ func (h *Handler) DeleteModule(c *gin.Context) {
 	c.Status(http.StatusOK)
 }
 
+// @Summary GetModule
+// @Tags module
+// @Description Get module by ID
+// @ID GetModule
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Module ID"
+// @Success 200 {object} core.ModLes
+// @Failure 400 {string} string "error"
+// @Failure 500 {string} string "error"
+// @Failure default {string} error "error"
+// @Router /module/{id} [get]
 func (h *Handler) GetModule(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 
@@ -60,7 +74,7 @@ func (h *Handler) GetModule(c *gin.Context) {
 	modles, err := h.services.Module.Get(id)
 
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
